crates/oxc_css_parser/tests/error/scss/value/calc/dollar.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: component value is expected
  ┌─ dollar.scss:1:12
  │
1 │ a {b: calc($)}
  │            ^
